# gym-chess

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
gym_chess/: __init__.py  envs.py
gym_chess/alphazero/: __init__.py  board_encoding.py
gym_chess/alphazero/move_encoding/: __init__.py  knightmoves.py  queenmoves.py  underpromotions.py  utils.py
