[tool.poetry]
name = "gym-chess"
version = "0.1.0"
description = ""
authors = ["Lucas Wolf <iamlucaswolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-chess = "^0.31.1"
gym = "^0.17.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
